The (generated by blackbox.ai )

--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -8,7 +8,7 @@
 
 .register-block {
   width: 35rem;
-  height: 40rem;
+  height: 48rem;
   border-radius: 1rem;
   padding: 2rem;
   background-color: #fff;
@@ -39,7 +39,7 @@
     padding: 0.7rem;
     width: 270px;
     height: 4rem;
-    color: #cdcdcd;
+    color: #000;
     margin-left: 2rem;
   }
   button {
