--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,9 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100 vh;
+  height: 100vh;
 }
-
 .login-block {
   width: 35rem;
   height: 40rem;
@@ -39,7 +38,7 @@
     padding: 0.7rem;
     width: 270px;
     height: 4rem;
-    color: #cdcdcd;
+    color: #000;
     margin-left: 2rem;
   }
   button {
