--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,7 +5,7 @@
   margin-top: 5rem;
   .card {
     width: 200px;
-    height: 100px;
+    height: 120px;
     border-radius: 1rem;
     cursor: pointer;
     padding: 1rem;
@@ -37,8 +37,8 @@
       span {
         font-size: 1.1rem;
       }
+      text-align: right;
       font-size: 1.7rem;
-      margin-top: 6rem;
     }
   }
 }
